tests/tooling/fixtures/native/execution/negative/extern_missing_fn_keyword.objc3
module ExternMissingFnKeyword;

extern let value = 1;

fn main() -> i32 {
  return value;
}
